# comp3125-individual-sephora

./: README.md  data  pyproject.toml
code/: .gitignore  pyproject.toml
code/sephora_analysis/: analyze.ipynb  predict.ipynb  products.csv  top_products.py
code/sephora_analysis/data/: purchase_intent_features.pkl  purchase_intent_model.pkl
report/: FinalReportDraft.docx  KledjaCaushiSephoraAnalysis.docx
sephora_analysis/: collect_reviews.py  top_products.py
